@@ -1,0 +1,2 @@
+version=3
+ftp://oss.sgi.com/projects/xfs/cmd_tars/ xfsprogs_([\d]+[\d\.]*)-[\d].tar.gz
